test/modules/lydia/fnModNameConflict2.good
fnModNameConflict2.chpl:3: error: 'M1' has multiple definitions, redefined at:
  fnModNameConflict2.chpl:7
